<resources>
    <string name="app_name">Betterzon</string>
    <string name="placeholder">Texto default</string>

    <string name="RegisterActivity_String">Bienvenido</string>
    <string name="RegisterActivity_BotonRegistrate">Regístrate</string>
    <string name="RegisterActivity_BotonIngresa">Ya tengo una cuenta</string>

    <string name="InputCedula">Cédula</string>
    <string name="InputNombre">Nombre</string>
    <string name="InputCelular">Celular</string>
    <string name="InputContraseña">Contraseña</string>

    <string name="LoginActivity_String">Bienvenido de vuelta</string>
    <string name="LoginActivity_BotonIngresa">Ingresa</string>
    <string name="LoginActivity_BotonRegistrate">Crear cuenta</string>

    <string name="bottomActivity_primerFragmento">Materiales</string>
    <string name="bottomActivity_segundoFragmento">Proyecto</string>
    <string name="bottomActivity_tercerFragmento">Donaciones</string>

    <string name="fragment2_titulo">Crea un nuevo proyecto</string>
    <string name="fragment2_presupuesto">Presupuesto</string>
    <string name="fragment2_dirección">Dirección</string>
    <string name="fragment2_tipo">Tipo:</string>
    <string name="fragment2_descripcion">Escribe la descripción de tu proyecto aquí</string>
    <string name="fragment2_button">Crear\nproyecto</string>

    <string name="fragment1_queryHint">Busca materiales</string>
    <string name="fragment1_wood">Maderas</string>
    <string name="fragment1_clay">Arcillas</string>
    <string name="fragment1_steel">Metales</string>
    <string name="fragment1_plastic">Plasticos</string>
    <string name="fragment1_glass">Vidrios</string>
    <string name="fragment1_petreo">Petreos</string>
    <string name="fragment1_concret">Concretos</string>

    <string name="fragment3_queryhint">Busca donaciones</string>
    <string name="fragment3_boton_recibir">Recibir\ndonación</string>

</resources>